--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
-hello cami
-como están todos 
-está es una prueba
+<!DOCTYPE html>
+	
+<html lang="es">
+	
+<head>
+<title>This is my hello world</title>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="estilos.css" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="alternate" title="Pozolería RSS" type="application/rss+xml" href="/feed.rss" />
+</head>
+	
+<body>
+				<header>
+							<h1>Hello how are you :·</h1>
+							<p> </p>
+				</header>
+				<section>
+							<article>
+								<h2> </h2>
+											<p> </p>
+							</article>
+				</section>
+				<aside>
+							<h3></h3>
+											<p></p>
+				</aside>
+				<footer>
+				</footer>
+</body>
+
+</html>
