--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 	
 <head>
-<title everybody></title>
+<title>Hola a todos</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="estilos.css" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -12,7 +12,7 @@
 	
 <body>
 				<header>
-							<h1>Hello how are you :·</h1>
+							<h1>Salió bien</h1>
 							<p> </p>
 				</header>
 				<section>
