--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>Hola a todos</title>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="estilos.css" />
+<link rel="stylesheet" href="style.css" />
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="alternate" title="Pozolería RSS" type="application/rss+xml" href="/feed.rss" />
 </head>
