--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 	
 <head>
-<title>Hola a todos</title>
+<title>Hola a todos nada sale bien</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="estilos.css" />
 <link rel="shortcut icon" href="/favicon.ico" />
