--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-my page
+<!DOCTYPE html>
+	
+<html lang="es">
+	
+<head>
+<title>Perfil profesional</title>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="estilos.css" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="alternate" title="Pozolería RSS" type="application/rss+xml" href="/feed.rss" />
+</head>
+	
+<body>
+				<header>
+							<h1>Juan Camilo Torres Peña</h1>
+							<p>nacido el 13 de junio de 1994</p>
+				</header>
+				<section>
+							<article>
+								<h2>Perfil profesional </h2>
+											<p>Estudiante de ingeniería de sistemas en 7 septimo semestre con conocimientos en tecnologías HTML5: html5, css3, y javascript, programación orientada a objetos java, conocimientos de otros lenguajes como c++   </p>
+							</article>
+				</section>
+				<aside>
+							<h3>Instituciones</h3>
+								<p>Ingeniería de sistemas-Universidad Distrital Francisco Jose de Caldas</p>
+				</aside>
+				<footer>
+				
+				</footer>
+</body>
+</html>
