--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 	
 <body>
+<script>alert("Te amo mi amorcita");</script>
 				<header>
 							<h1>Juan Camilo Torres Peña</h1>
 							<p>nacido el 13 de junio de 1994</p>
