--- a/index.html
+++ b/index.html
@@ -1,34 +1,16 @@
 <!DOCTYPE html>
-	
-<html lang="es">
-	
-<head>
-<title>Perfil profesional</title>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="style.css" />
-<script type="text/javascript" src="codigo.js"></script>
-</head>
-	
-<body onclick="historia.html">
-				<header>
-							<h1>GLUD</h1>
-							<p>nacido el 13 de junio de 1994</p>
-				</header>
-				<section>
-							<article>
-								<h2>Evaluación de conocimientos de html </h2>
-											<p>   </p>
-							</article>
-				</section>
-				<aside>
-					
-						<input >
-						<br/>
-						<input type="button" value="Empezar" onclick=" window.location.href='historia.html'">
-								
-				</aside>			
-				<footer>
-					<p>Ingeniería de sistemas-Universidad Distrital Francisco Jose de Caldas</p>
-				</footer>
-</body>
+<html>
+	<head>
+		<title>GLUD web community</title>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="style.css" />
+		<script type="text/javascript" src="codigo.js"></script>
+	</head>
+		<h1>GLUD web community</h1>
+		<aside>
+			<section>
+				<h2>Examen de conocimientos básicos de html</h2>
+				<p>Accede <a href="examen.html"> aquí </a></p>	
+			</section>
+		</aside>
 </html>
