--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>GLUD web community</title>
+		<title>asdasdGLUD web community</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="style.css" />
 		<script type="text/javascript" src="codigo.js"></script>
