agregada segunda pregunta

--- a/historia.html
+++ b/historia.html
@@ -12,10 +12,10 @@
 <body>
 				<section>
 					<h3>Es lo mismo la web que internet</h3>
-					<form action="index.html" method="post">
-						<input type="radio" name="web" id="respuesta" value="si">si
+					<form action="2pregunta.html" method="get">
+						<input type="radio" name="web"  value="si">si
 						<br/>
-						<input type="radio" name="web" id="respuesta" value="no"> no
+						<input type="radio" name="web"  value="no"> no
 						<br/>
 						<br/>
 						<input type="button" id="r1" onclick="corroborar()" name="respuesta" value="Responder">
