vuelve a la pagina de inicio cuando acaba

--- a/2pregunta.html
+++ b/2pregunta.html
@@ -11,9 +11,9 @@
 	
 <body>
 		<section>
-			<form>
+			<form action="http://www.gludwebcommunity.me/" method="get">
 				<h3>Que entiende por html</h3>
-				<input type="radio" name="web" value="Hyper Text Mask Language"> Hyper Text Mask Language
+				<input type="radio" name="web" value="Hyper Text Mask Language" > Hyper Text Mask Language
 				<br/>
 				<input type="radio" name="web" value="Hard Text Markup Language">  Hard Text Markup Language
 				<br/>
