hasta la pregunta 5

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<title>GLUD web community</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<script type="text/javascript" src="codigo.js"></script>
 	</head>
+			<a id="glud" href="http://glud.org/">GLUD</a>
+						<img src="logo.jpg" id="logo">	
+		</header>
 		<h1>GLUD web community</h1>
 		<aside>
 			<section>
