corrigiendo ubicación css

--- a/preguntas.html
+++ b/preguntas.html
@@ -5,7 +5,7 @@
 <head>
 <title>Titulo de la web</title>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="css/style.css" />
 <script type="text/javascript" src="codigo.js"></script>
 </head>
 	
@@ -24,7 +24,7 @@
 						<input type="button" id="r1" onclick="corroborar('0')" name="respuesta" value="Responder">
 					</form>
 				</section>
-				<section style='display:none;' id="p2">
+				<section id="p2">
 			<form action="http://www.gludwebcommunity.me/" method="get">
 				<h3>Que entiende por html</h3>
 				<input type="radio" name="web" value="Hyper Text Mask Language" > Hyper Text Mask Language
@@ -36,7 +36,7 @@
 				<input type="button" id="r2" onclick="corroborar('1')" name="respuesta" value="Responder">
 			</form>
 		</section>
-		<section style='display:none;' id="p3">
+		<section id="p3">
 			<form action="http://www.gludwebcommunity.me/" method="get">
 				<h3>¿Cuál es la forma correcta de insertar un comentario? </h3>
 				<input type="radio" name="web" value="correcto" >  &lt;!--...--&gt;
