--- a/examen.html
+++ b/examen.html
@@ -5,7 +5,7 @@
 <head>
 <title>Examen</title>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="css/style.css" />
 <script type="text/javascript" src="codigo.js"></script>
 </head>
 	
