--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>GLUD web community</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 		<script type="text/javascript" src="codigo.js"></script>
 	</head>
 			<a id="glud" href="http://glud.org/">GLUD</a>
