--- a/preguntas.html
+++ b/preguntas.html
@@ -33,6 +33,7 @@
 				<br/>
 				<input type="radio" name="web" value="correcto"> Hyper Text Markup Language
 				<br/>
+				<br/>
 				<input type="button" id="r2" onclick="corroborar('1')" name="respuesta" value="Responder">
 			</form>
 		</section>
@@ -44,6 +45,7 @@
 				<input type="radio" name="web" value="<¡--...--!>">  &lt;¡--...--!&gt;
 				<br/>
 				<input type="radio" name="web" value="incorrecto"> &lt;coment&gt;	
+				<br/>
 				<br/>
 				<input type="button" id="r3" onclick="corroborar('2')" name="respuesta" value="Responder">
 			</form>
@@ -57,6 +59,7 @@
 				<br/>
 				<input type="radio" name="web" value="Hyper Text Markup Language"> &lt;a  url="http://www.unsitio.com">...&lt;/a&gt;	
 				<br/>
+				<br/>
 				<input type="button" id="r4" onclick="corroborar('3')" name="respuesta" value="Responder">
 			</form>
 		</section>
@@ -66,9 +69,94 @@
 			<input type="button" id="r5" onclick="corroborar('4')" name="respuesta" value="Responder">
 			</form>
 		</section>
+		<section id="p6">
+			<form action="http://www.gludwebcommunity.me/" method="get">
+			<h3> ¿Cuál de la siguiente etiqueta representa una pieza independiente del contenido de un documento en HTML5 ?</h3>
+			<input type="radio" name="web" value="incorrecto">Section
+			<br/>
+			<input type="radio" name="web" value="incorrecto">Article
+			<br/>
+			<input type="radio" name="web" value="correcto">Asid
+			<br/>
+			<input type="radio" name="web" value="incorrecto">Header
+			<br/>
+			<br/>
+			<input type="button" id="r6" onclick="corroborar('5')" name="respuesta" value="Responder">
+			</form>	
+		</section>
+		<section id="p7">
+			<form action="http://www.gludwebcommunity.me/" method="get">
+			<h3> ¿protocolo que usa http para proporcionar conexiones seguras?</h3>
+			<input type="radio" name="web" value="incorrecto">SSH
+			<br/>
+			<input type="radio" name="web" value="correcto">SSL
+			<br/>
+			<input type="radio" name="web" value="incorrecto">AES
+			<br/>
+			<input type="radio" name="web" value="incorrecto">FTP
+			<br/>
+			<br/>
+			<input type="button" id="r7" onclick="corroborar('6')" name="respuesta" value="Responder">
+			</form>	
+		</section>
+		<section id="p8">
+			<form action="http://www.gludwebcommunity.me/" method="get">
+			<h3> Elija la sintaxis correcta para el atributo &lt;input&gt; en html5</h3>
+			<input type="radio" name="web" value="incorrecto">&lt;input type="text" value="John" disabled &gt;
+			<br/>
+			<input type="radio" name="web" value="correcto">&lt;input type="text" value=John> &gt;
+			<br/>
+			<input type="radio" name="web" value="incorrecto">&lt;input type="text" value="John Doe" &gt;
+			<br/>
+			<input type="radio" name="web" value="incorrecto">&lt;input type="text" value='John Doe'&gt;
+			<br/>
+			<input type="radio" name="web" value="correcto">Todas las anteriores
+			<br/>
+			<br/>
+			<input type="button" id="r8" onclick="corroborar('7')" name="respuesta" value="Responder">
+			</form>	
+		</section>
 		<section  id="p90">
 			Has finalizado pero aún queda mucho por aprender
 			<a href="http://www.gludwebcommunity.me">volver al inicio</a>
+		</section>
+		<section id="p9" style="display:block;" >
+				<form action="http://www.gludwebcommunity.me/" method="get" >
+					<h3>Escriba la estructura básica de un documento html5</h3>
+					<article id="a1">
+						<pre>
+&lt;<select name="e1">
+<option value="11">html5</option>
+<option value="11">!DOCTYPE html</option>
+<option value="11">¡DOCTYPE html</option>
+<option value="11">body</option>
+</select>&gt;
+&lt;html&gt;
+	&lt;<select name="e2">
+	<option value="11">html5</option>
+<option value="11">body</option>
+<option value="11">head</option>
+<option value="11">header</option>
+</select>&gt;
+		&lt;title>Titulo de la web&lt;/title>
+		&lt;meta charset="utf-8" />
+		&lt;link rel="stylesheet" href="css/style.css" />
+		&lt;script type="text/javascript" src="codigo.js"></script>
+	&lt;<select name="e3">
+	<option value="11">html5</option>
+<option value="11">head</option>
+<option value="11">header<	/option>
+<option value="11">type</option>
+</select>&gt;
+		&lt;<select name="s4">
+<option value="11">body</option>	
+<option value="11">head</option>
+<option value="11">br</option>
+		</select>&gt;
+&lt;html&gt;
+					 	</pre>
+					</article>
+				</form>
 		</section>
 				<footer>
 				GLUD web community
