--- a/preguntas.html
+++ b/preguntas.html
@@ -120,7 +120,7 @@
 			Has finalizado pero aún queda mucho por aprender
 			<a href="http://www.gludwebcommunity.me">volver al inicio</a>
 		</section>
-		<section id="p9" style="display:block;" >
+		<section id="p9" >
 				<form action="http://www.gludwebcommunity.me/" method="get" >
 					<h3>Escriba la estructura básica de un documento html5</h3>
 					<article id="a1">
