--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>GLUD web community</h1>
 		<aside>
 			<section>
-				<h2>Examen de conocimientos básicos de html</h2>
+				<h2>Examen de conocimientos básicos de html y otras cosas xD</h2>
 				<p>Accede <a href="examen.html"> aquí </a></p>	
 			</section>
 		</aside>
