--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<script type="text/javascript" src="codigo.js"></script>
 	</head>
+        <header>
 			<a id="glud" href="http://glud.org/">GLUD</a>
 						<img src="logo.jpg" id="logo">	
 		</header>
