--- a/preguntas.html
+++ b/preguntas.html
@@ -104,7 +104,7 @@
 			<h3> Elija la sintaxis correcta para el atributo &lt;input&gt; en html5</h3>
 			<input type="radio" name="web" value="incorrecto">&lt;input type="text" value="John" disabled &gt;
 			<br/>
-			<input type="radio" name="web" value="correcto">&lt;input type="text" value=John> &gt;
+			<input type="radio" name="web" value="correcto">&lt;input type="text" value=John &gt;
 			<br/>
 			<input type="radio" name="web" value="incorrecto">&lt;input type="text" value="John Doe" &gt;
 			<br/>
