actualización a la página

--- a/index.html
+++ b/index.html
@@ -1,20 +1,78 @@
-<!DOCTYPE html>
+<!Doctype hmtl>
 <html>
-	<head>
-		<title>GLUD web communitys</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="css/style.css" />
-		<script type="text/javascript" src="codigo.js"></script>
-	</head>
-        <header>
-			<a id="glud" href="http://glud.org/">GLUD</a>
-						<img src="logo.jpg" id="logo">	
-		</header>
-		<h1>GLUD web community</h1>
-		<aside>
-			<section>
-				<h2>Examen de conocimientos básicos de html y otras cosas xD</h2>
-				<p>Accede <a href="examen.html"> aquí </a></p>	
-			</section>
-		</aside>
+    <head>
+        <title>GLUD Web Community</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximun-scale=1, minimum-scale=1">
+        <link rel="stylesheet" href="css/estilos.css">
+    </head>
+    <body>
+       <header>
+           <h1>GLUD WEB COMMUNYTY</h1>
+        </header>
+        <div class="contenedor">
+                <div class="carta">
+                    <div class="lado frente" >
+                        <img id="logo" src="logo.jpg" alt="">
+                    </div>
+                    <div class="lado atras">
+                        <ul>
+                            <a href="pres/index.html" target="_blank"><li>¿Quienes somos?</li></a>
+                        </ul>
+                    </div>
+                </div>        
+            </div>
+        <div class="supc">
+            <div class="contenedor">
+                <div class="carta">
+                    <div class="lado frente" >
+                        <img src="imgs/html5.png" alt="">
+                    </div>
+                    <div class="lado atras">
+                        <ul>
+                            <a href="http://www.google.com" target="_blank"><li>Historia y concepto</li></a>
+                            <a href="" target="_blank"><li>Etiquetas y atributos</li></a>
+                            <a href="" target="_blank"><li>Enlaces o links</li></a>
+                            <a href="examen.html" target="_blank">
+                            <li>Prueba de HTML </li>    
+                            </a>
+                        </ul>
+                    </div>
+                </div>        
+            </div> 
+
+            <div class="contenedor">
+                <div class="carta">
+                    <div class="lado frente" >
+                        <img src="imgs/css3.png" alt="">
+                    </div>
+                    <div class="lado atras">
+                        <ul>
+                            <a href="http://www.google.com" target="_blank"><li>Historia y concepto</li></a>
+                            <a href=""><li>chao</li></a>
+                            <li>otro</li>
+                            <li>siii</li>
+                        </ul>
+                    </div>
+                </div>        
+            </div>
+
+            <div class="contenedor">
+                <div class="carta">
+                    <div class="lado frente" >
+                        <img src="imgs/js.png" alt="">
+                    </div>
+                    <div class="lado atras">
+                        <ul>
+                            <a href="http://www.google.com" target="_blank"><li>hola</li></a>
+                            <li>chao</li>
+                            <li>otro</li>
+                            <li>siii</li>
+                        </ul>
+                    </div>
+                </div>        
+            </div>
+        </div>
+            
+    </body>
 </html>
