agregando links javascript

--- a/htmljs/historiajs.html
+++ b/htmljs/historiajs.html
@@ -2,9 +2,17 @@
 <html>
     <head>
         <title>Javascript</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximun-scale=1, minimum-scale=1">
+        <link rel="stylesheet" href="../css/subhtml.css">
     </head>
     <body>
+       <div id="wrapper">
+       <div id="logo">
+       <h1>Javascript</h1>
         <h3>Historia Javascript</h3>
+        </div>
+        <div id="page">
         <p>Antes de hablar acerca de asuntos mas técnicos es pertinente hablar un poco de la historia y de la relevancia de javascript.
         <br>
         <br>
@@ -19,5 +27,7 @@
         
          <a href="http://librosweb.es/libro/javascript/capitulo_1/breve_historia.html"   target="_blank">Aquí</a> más información acerca de la historia.
         <br>
+        </div>
+        </div>
     </body>
 </html>
