--- a/htmljs/operadoresjs.html
+++ b/htmljs/operadoresjs.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <title>Javascript </title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximun-scale=1, minimum-scale=1">
+        <link rel="stylesheet" href="../css/subhtml.css">
     </head>
     <body>
+       <div id="wrapper">       
+       <div id="logo">
         <h1>Javascript</h1>
         <h3>Operadores</h3>
+        </div>
+        <div id="page"></div>
         <ul>
             <li><strong>Asignación</strong></li>
             <br>
@@ -106,8 +113,8 @@
             <br>
             Estos operadores comparan dos terminos (númericos, cadena de carácteres Strings, objetos o lógicos) y devuelve un valor lógico.
             <br>
-            En la siguiente tabla se muestra como funcionan.
-            <img src="imgs/comparar.png" alt="comparadores">
+            En la siguiente tabla se muestra como funcionan. <br>
+            <img src="../imgs/comparar.png" alt="comparadores" id="comp">
         </ul>
         A continuación algunos enlaces que nos han servido como fuentes, y donde se puede amplir la información obtenida.
         
@@ -120,5 +127,7 @@
         <a href="http://www.htmlpoint.com/javascript/corso/js_30.htm" target="_blank">Operadores3</a>
         <br>
         <a href="https://www.funcion13.com/por-que-usar-tres-simbolos-de-igual-para-comparar-en-javascript/" target="_blank">Diferencia entre == y ===</a>
+        </div>
+        </div>
     </body>
 </html>
