--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
                     </div>
                     <div class="lado atras">
                         <ul>
-                            <a href="http://www.google.com" target="_blank"><li>hola</li></a>
-                            <li>chao</li>
-                            <li>otro</li>
-                            <li>siii</li>
+                            <a href="htmljs/historiajs.html" target="_blank"><li>Historia</li></a>
+                            <a href="htmljs/sintaxisVariablesjs.html" target="_blank"><li>Sintaxis</li></a>
+                            <a href="htmljs/operadoresjs.html" target="_blank"><li>Operadores</li></a>
+                            <a href="htmljs/estructuraControljs.html" target="_blank"><li>Estructuras de flujo y control</li></a>
+                            <a href="htmljs/funcionesjs.html" target="_blank"><li>Funciones</li></a>
+                            <a href="htmljs/objetos.html" target="_blank"><li>Objetos</li></a>
                         </ul>
                     </div>
                 </div>        
