Agregando links html

--- a/htmljs/objetos.html
+++ b/htmljs/objetos.html
@@ -19,6 +19,7 @@
                    <br><br>
                    Existen dos formas de crear un objeto y de asignarle propiedades al mismo:
                    <br>
+                   <strong>sadasda</strong>
                    <h2></h2>
                    
                 </p>
