--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
                     </div>
                     <div class="lado atras">
                         <ul>
-                            <a href="http://www.google.com" target="_blank"><li>Historia y concepto</li></a>
-                            <a href="" target="_blank"><li>Etiquetas y atributos</li></a>
-                            <a href="" target="_blank"><li>Enlaces o links</li></a>
+                            <a href="html/HistoriaConcepto.html" target="_blank"><li>Historia y concepto</li></a>
+                            <a href="html/estructuraBasicahtml.html" target="_blank"><li>Estructura básica </li></a>
+                            <a href="html/EtiquetasCuerpo.html" target="_blank"><li>Etiquetas</li></a>
+                            <a href="html/AtributosEtiquetas.html" target="_blank">
+                            <li>Atributos </li>    
+                            </a>
+                            <a href="html/EnlacesLinks.html" target="_blank">
+                            <li>Enlaces o links</li>    
+                            </a>
+                            <a href="html/TablasListas.html" target="_blank">
+                            <li>Tablas y listas </li>    
+                            </a>
+                            <a href="html/Formularios.html" target="_blank">
+                            <li>Formularios </li>    
+                            </a>
                             <a href="examen.html" target="_blank">
                             <li>Prueba de HTML </li>    
                             </a>
