estilo pag inicio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
        <header>
-           <h1>GLUD WEB COMMUNYTY</h1>
+           <h1 id="tit">GLUD WEB COMMUNITY</h1>
+           
         </header>
         <div class="contenedor">
                 <div class="carta">
@@ -87,6 +88,10 @@
                 </div>        
             </div>
         </div>
+           <div id="pie">
+               <h3>Universidad Distrital Francisco José de Caldas</h3>
+               <h3>Grupo Linux Universidad Distrital</h3>
+           </div>
             
     </body>
 </html>
