boton de inicio

--- a/html/AtributosEtiquetas.html
+++ b/html/AtributosEtiquetas.html
@@ -41,6 +41,8 @@
         <p>En este <a href="https://developer.mozilla.org/es/docs/Web/HTML/Atributos" target="_blank">link</a> pueden encontrar una lista de atributos de acuerdo a cada etiqueta.</p>
             
            </div>
-        </div>                                                   
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                   
     </body>
 </html>
