--- a/html/EnlacesLinks.html
+++ b/html/EnlacesLinks.html
@@ -50,6 +50,8 @@
         <img src="Imagenes/Enlaces2.PNG" alt="Teclado">
         
             </div>
-        </div>                                                   
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>             
     </body>
 </html>
