--- a/html/EtiquetasCuerpo.html
+++ b/html/EtiquetasCuerpo.html
@@ -59,6 +59,8 @@
 
         <p>Con estas etiquetas ya podemos desarrollar una estructura básica para la etiqueta &lt;body>...&lt;/body></p>
             </div>
-        </div>                                                    
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                    
     </body>
 </html>
