--- a/html/Formularios.html
+++ b/html/Formularios.html
@@ -51,6 +51,8 @@
         <img src="Imagenes/boton2.PNG" alt="Teclado"><br>
         
            </div>
-        </div>                                                     
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                
     </body>
 </html>
