--- a/html/estructuraBasicahtml.html
+++ b/html/estructuraBasicahtml.html
@@ -33,6 +33,8 @@
         <li>body En su interior tendremos el contenido de la página.</li><br>
                                                     
             </div>
-        </div>                                                    
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>            
     </body>
 </html>
