--- a/htmljs/estructuraControljs.html
+++ b/htmljs/estructuraControljs.html
@@ -166,5 +166,8 @@
         <br><a href="http://librosweb.es/libro/javascript/capitulo_4/otras_estructuras_de_control.html" target="_blank">Estructuras de control de flujo2</a>
         <br><a href="http://dis.um.es/~lopezquesada/documentos/IES_1314/IAW/curso/UT7/libroswebjavascript/www.librosweb.es/javascript/capitulo3/estructuras_de_control_de_flujo.html">Estructuras de control de flujo3</a>
             </div>
+        <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>
     </body>
 </html>
