--- a/htmljs/operadoresjs.html
+++ b/htmljs/operadoresjs.html
@@ -129,5 +129,8 @@
         <a href="https://www.funcion13.com/por-que-usar-tres-simbolos-de-igual-para-comparar-en-javascript/" target="_blank">Diferencia entre == y ===</a>
         </div>
         </div>
+        <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>
     </body>
 </html>
