--- a/htmljs/sintaxisVariablesjs.html
+++ b/htmljs/sintaxisVariablesjs.html
@@ -87,5 +87,8 @@
             </ol>
             </div>
         </div>
+        <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>
     </body>
 </html>
