--- a/html/HistoriaConcepto.html
+++ b/html/HistoriaConcepto.html
@@ -66,5 +66,8 @@
        
             </div>
         </div>
+        <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>
     </body>
 </html>
