--- a/htmljs/historiajs.html
+++ b/htmljs/historiajs.html
@@ -29,5 +29,8 @@
         <br>
         </div>
         </div>
+        <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>
     </body>
 </html>
