--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     </div>
                     <div class="lado atras">
                         <ul>
-                            <a href="http://www.google.com" target="_blank"><li>Historia y concepto</li></a>
-                            <a href=""><li>chao</li></a>
-                            <li>otro</li>
-                            <li>siii</li>
+                            <a href="htmlcss/HistoriaConcepto.html" target="_blank"><li>Historia y concepto</li></a>
+                            <a href="htmlcss/Sintaxis.html" target="_blank"><li>Sintaxis y selectores</li></a>
+                            <a href="htmlcss/Fondos.html" target="_blank"><li>Fondos</li></a>
+                            <a href="htmlcss/Funtes.html" target="_blank"><li>Fuentes</li></a>
                         </ul>
                     </div>
                 </div>        
