--- a/htmlcss/HistoriaConcepto.html
+++ b/htmlcss/HistoriaConcepto.html
@@ -44,6 +44,8 @@
    	  </p>
    	   
            </div>
-        </div>                                                     
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                      
     </body>
 </html>
