--- a/htmlcss/Fondos.html
+++ b/htmlcss/Fondos.html
@@ -39,6 +39,9 @@
         
    	   
            </div>
-        </div>                                                     
+        </div> 
+        <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                                                    
     </body>
 </html>
