--- a/htmlcss/Funtes.html
+++ b/htmlcss/Funtes.html
@@ -77,6 +77,8 @@
  			<img src="Imagenes/fuente5.png" alt="Imagen"> 
    	   
            </div>
-        </div>                                                     
+        </div>                                <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                    
     </body>
 </html>
