--- a/htmlcss/Sintaxis.html
+++ b/htmlcss/Sintaxis.html
@@ -61,6 +61,8 @@
    	   <img src="Imagenes/sintaxis4.png" alt="Imagen">	
    	   
            </div>
-        </div>                                                     
+        </div>                               <form action="../index.html">
+                     <input type="submit" value="Volver a la página de inicio" id="button">  
+                   </form>                      
     </body>
 </html>
